# Nano-Wasm-Edge-Connector

./: .gitignore  AGENTS.md  Cargo.toml  LINKEDIN_POST.md  POSTER.md  README.md  TESTING.md
.cargo/: config.toml
.github/workflows/: ci.yml
guest/: Cargo.toml  policy.wat
guest/src/: lib.rs
host/: Cargo.toml
host/src/: error.rs  main.rs  policy_runtime.rs  watcher.rs
policies/: default.wasm
shared/src/: lib.rs
