[workspace]
resolver = "2"
members = ["host", "guest", "shared"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["hadijannat"]
license = "MIT"

[workspace.dependencies]
wasmtime = { version = "27", default-features = false, features = ["cranelift", "runtime"] }
tokio = { version = "1", default-features = false, features = ["rt", "net", "time", "sync", "macros", "signal", "fs"] }
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
notify = "8"
notify-debouncer-mini = "0.5"
thiserror = "1"
anyhow = "1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release.package.guest]
opt-level = "z"
